# mopidy-smartplaylists

./: .copier-answers.yml  .mailmap  PROJECT.org  README.md  pyproject.toml
.gitea/workflows/: deploy.yml
.github/workflows/: ci.yml  release.yml
src/mopidy_smartplaylists/: __init__.py  compat.py  ext.conf  frontend.py  generators.py  web.py
src/mopidy_smartplaylists/static/: index.html
tests/: test_extension.py  test_frontend.py  test_generators.py  test_web.py
